--- a/MasterDataExt_v2/SAPconnsettings.ini
+++ b/MasterDataExt_v2/SAPconnsettings.ini
@@ -16,3 +16,10 @@ ItemsUpdate=NO
 FreightCharge=NO
 Branch=001
 DestPath=C:\in
+
+[StoredProcedure]
+ItemMaster=[dbo].[RCS_EXTRACT_ITEMMASTER]
+ItemMasterUpdate=[dbo].[RCS_Extract_Product_Update]
+ItemMasterFC=[dbo].[RCS_EXTRACT_ITEMMASTER_FC]
+BPSupplier=[dbo].[RCS_EXTRACT_BPSupplier]
+BPCustomer=[dbo].[RCS_EXTRACT_BPCustomer]
